# Volvo240-DigitalDash

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  LICENSE  README.md  SetupBuildEnv.md
.github/workflows/: codeql.yml
GtkDash/gtk-test/: Cargo.toml
GtkDash/gtk-test/src/: gauge.rs  main.rs
QtDash/: .gitignore  config.ini  config_can.ini  config_gauges.ini  config_odo.ini  connector_6pin_legend.txt  wpa_supplicant.conf
QtDash/940 Gauges/: clock_940.xcf  speedo_940.xcf
QtDash/ADC-MCU/: .cproject  .mxproject  .project  ADC-MCU.ioc
QtDash/GaugeCreator/: Gauge.qml  NeedleCenter.qml  SliderValue.qml  TextInputValue.qml  main.cpp  main.qml  qml.qrc
QtDash/Hardware/: .gitignore  Wiring.ods  coil_sim.asc  con_31.dxf  inputs_sim.asc
QtDash/R-sport-cluster/: RClusterFont.sfd
QtDash/VolvoDigitalDash/: .qmake.stash  AccessoryCluster.qml  AmbientTemp.qml  BoostGauge.qml  Clock.qml  MainCluster.qml  MainClusterCustom.qml  Makefile  Makefile.Debug  Makefile.Release  NeedleCenter.qml  OilPressure.qml  OilTemperature.qml  Speedo.qml  Tacho.qml  TempCoolant.qml  Volts.qml  VolvoDigitalDash.pro  VolvoDigitalDash.pro.user.0d1ecdb  VolvoDigitalDash.pro.user.346a3c7  arrow.xcf  boost_black_no_numbers.xcf  clock_black.xcf  main.cpp  main.qml  qml.qrc  volt_black.xcf
QtDash/VolvoDigitalDashModels/: AmbientTemp.qml  BigTachCenter.qml  BigTachLeft.qml  Blinker.qml  BoostGauge.qml  Bulb_failure_icon.xcf  Makefile  OilPressure.qml  OilTemperature.qml  Original240Layout.qml  Speedo.qml  Volts.qml  VolvoDigitalDashModels  VolvoDigitalDashModels.pro  adc.h  (+42 more)
buildroot/: .config
(+853 files in other folders)
